# personal-g00gle-mgmt

./: .gitignore  .mcp.json  .opencode.json  AGENTS.md  CLAUDE.md  PACKAGE_PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.gemini/: settings.json
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.github/workflows/: lint.yml
infra/cs-svc-gmail-ro/: .gitignore  Makefile  README.md  requirements.md
infra/cs-svc-gmail-ro/app/: Dockerfile  main.py  requirements.txt  utcp_manual.py
infra/cs-svc-gmail-ro/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
infra/cs-svc-gmail-ro/scripts/: generate_token.py  local_client.py  requirements.txt  upload_token.py
infra/cs-svc-gmail-ro/tests/: conftest.py  requirements.txt  test_service.py
src/personal_g00gle_mgmt/: __init__.py  auth.py  utils.py
src/personal_g00gle_mgmt/cli/: __init__.py  gmail.py  main.py
src/personal_g00gle_mgmt/drive/: __init__.py  component.py  models.py  provider.py  resource.py
src/personal_g00gle_mgmt/gmail_ro/: __init__.py  client.py  mcp_server.py
tests/: test_component.py  test_models.py  test_provider.py
