[project]
name = "personal-g00gle-mgmt"
version = "0.1.0"
description = "Personal Google Cloud and Services Management IaC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pulumi>=3.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "typer>=0.12.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
pg0 = "personal_g00gle_mgmt.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C90",
]
ignore = [
    "E501",
]

[tool.ruff.lint.mccabe]
max-complexity = 10
